--- a/.github/workflows/runway-smoke.yml
+++ b/.github/workflows/runway-smoke.yml
@@ -43,25 +43,24 @@ jobs:
         env:
           CF_ACCESS_CLIENT_ID: ${{ secrets.CF_ACCESS_CLIENT_ID }}
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
-          PVE_ACCESS_HOST: ${{ secrets.PVE_ACCESS_HOST }}   # just the hostname, no scheme
+          PVE_ACCESS_HOST: ${{ secrets.PVE_ACCESS_HOST }}   # e.g. pve-api.example.com (NO scheme)
         shell: bash
         run: |
           set -euo pipefail
           HOST="${PVE_ACCESS_HOST#https://}"; HOST="${HOST#http://}"
           echo "Using Access hostname: ${HOST}"
+          ./cloudflared.bin --version || true
 
-          # Start local TCP forwarder to Access-protected origin (explicitly pass creds)
+          # Start local TCP forwarder to Access-protected origin (env vars provide creds)
           nohup ./cloudflared.bin access tcp \
             --hostname "${HOST}:443" \
             --listener 127.0.0.1:9443 \
-            --access-client-id "${CF_ACCESS_CLIENT_ID}" \
-            --access-client-secret "${CF_ACCESS_CLIENT_SECRET}" \
             > cloudflared.log 2>&1 &
 
           # Wait for listener or fail with logs
           for i in {1..30}; do
             sleep 1
-            if nc -z 127.0.0.1 9443; then
+            if nc -z 127.0.0.1 9443 ; then
               echo "cloudflared TCP proxy is up"
               exit 0
             fi
@@ -73,7 +72,7 @@ jobs:
           echo "cloudflared TCP proxy failed to start; logs follow:"; sed -n '1,200p' cloudflared.log || true
           exit 1
 
-      - name: Sanity check TLS through proxy (expect 200/3xx/4xx, but must CONNECT)
+      - name: Sanity check TLS through proxy (must CONNECT)
         env:
           PVE_ACCESS_HOST: ${{ secrets.PVE_ACCESS_HOST }}
         shell: bash
@@ -81,17 +80,14 @@ jobs:
           set -euo pipefail
           HOST="${PVE_ACCESS_HOST#https://}"; HOST="${HOST#http://}"
           echo "Curling via proxy with: --resolve ${HOST}:443:127.0.0.1"
-          # -v: verbose; --resolve forces DNS+SNI to hit 127.0.0.1 while presenting HOST
-          # We only test connectivity here; 401/403 is fine (means we reached origin).
           curl -v --fail-early \
             --resolve "${HOST}:443:127.0.0.1" \
             "https://${HOST}/" -o /dev/null || {
-              echo "❌ Could not connect to origin via Access proxy."
-              echo "--- cloudflared.log (tail) ---"
-              tail -n 200 cloudflared.log || true
+              echo "❌ Could not connect via Access proxy."
+              echo "--- cloudflared.log (tail) ---"; tail -n 200 cloudflared.log || true
               exit 1
             }
-          echo "✅ Connected to origin through Access proxy (HTTP status may be 3xx/4xx/5xx and that's OK for this step)."
+          echo "✅ Connected to origin through Access proxy (HTTP status code can be 3xx/4xx/5xx and that’s OK here)."
 
       - name: Call Proxmox /version via proxy
         env:
