--- a/.github/workflows/l1-arch.yml
+++ b/.github/workflows/l1-arch.yml
@@ -76,6 +76,9 @@ jobs:
           set -euo pipefail
           make l1-manifest RUN=
 
+      - name: List artifacts
+        run: ls -lah artifacts/l1_images
+
       - name: Upload L1 artifacts
         uses: actions/upload-artifact@v4
         with:
