--- a/.github/workflows/l2-clone.yml
+++ b/.github/workflows/l2-clone.yml
@@ -141,14 +141,14 @@ jobs:
           set -euo pipefail
           terraform apply -auto-approve tfplan
 
-      - name: Capture terraform outputs
-        id: tfout
-        working-directory: terraform/l2
-        run: |
-          set -euo pipefail
-          mkdir -p ../../artifacts/l2_inventory
-          terraform output -json > ../../artifacts/l2_inventory/terraform_outputs.json
-          cat ../../artifacts/l2_inventory/terraform_outputs.json
+      # - name: Capture terraform outputs
+      #   id: tfout
+      #   working-directory: terraform/l2
+      #   run: |
+      #     set -euo pipefail
+      #     mkdir -p ../../artifacts/l2_inventory
+      #     terraform output -json > ../../artifacts/l2_inventory/terraform_outputs.json
+      #     cat ../../artifacts/l2_inventory/terraform_outputs.json
 
       - name: Verify IP via guest agent
         id: ga_check
@@ -158,7 +158,7 @@ jobs:
           echo "Querying Proxmox guest agent for IP address..."
 
           # Read from the outputs file we just wrote
-          OUT="artifacts/l2_inventory/terraform_outputs.json"
+          OUT="../../artifacts/l2_inventory/inventory.json"
           jq -r 'keys[]' "$OUT"
 
           vmid="$(jq -r '.vm_id.value' "$OUT")"
